stuctures body into sections

--- a/profile.html
+++ b/profile.html
@@ -14,27 +14,28 @@
 </nav>
 <body>
     <h1>Main Heading</h1>
-    <h2 id="first-subheading">Sub-Heading</h2>
-    <p>This is a paragraph about a person</p>
-    <ol>
-        <li>This is a point</li>
-        <li>That forms a part</li>
-        <li>Of an ordered list</li>
-    </ol>
-    <img id="stickman-img" 
-        src="https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png" 
-        alt="A stick figure is standing"
-        height="200px">
-    <h2 id="second-subheading">Another Sub-Heading</h2>
-    <p>This paragraph should talk about another aspect of a person</p>
-    <ul>
-        <li>This is a point</li>
-        <li>That forms part</li>
-        <li>Of an unordered list</li>
-    </ul>
-    <img id="food-img" 
-        src="https://i.pinimg.com/564x/ef/18/82/ef1882d2152faddd54ca2d24ce85511e.jpg" 
-        alt="Hand drawn food items">
+    <section id ="first-section">
+        <h2 id="first-subheading">Sub-Heading</h2>
+        <p>This is a paragraph about a person</p>
+        <ol>
+            <li>This is a point</li>
+            <li>That forms a part</li>
+            <li>Of an ordered list</li>
+        </ol>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png" 
+            alt="A stick figure is standing" id="stickman-img" >
+    </section>
+    <section id="second-section">
+        <h2 id="second-subheading">Another Sub-Heading</h2>
+        <p>This paragraph should talk about another aspect of a person</p>
+        <ul>
+            <li>This is a point</li>
+            <li>That forms part</li>
+            <li>Of an unordered list</li>
+        </ul>
+        <img src="https://i.pinimg.com/564x/ef/18/82/ef1882d2152faddd54ca2d24ce85511e.jpg" 
+            alt="Hand drawn food items" id="food-img" >
+    </section>
 </body>
 <footer>
     <p>To see more, please visit my <a href="https://github.com/Stephen0wen" target="_blank">GitHub profile</a></p>
