adds a third section

--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="#first-subheading">Sub-Heading</a></li>
         <li><a href="#second-subheading">Another Sub-Heading</a></li>
+        <li><a href="#third-subheading">More Sub-Heading</a></li>
     </ul>
 </nav>
 <body>
@@ -35,6 +36,19 @@
         </ul>
         <img src="https://i.pinimg.com/564x/ef/18/82/ef1882d2152faddd54ca2d24ce85511e.jpg" 
             alt="Hand drawn food items" id="food-img" >
+    </section>
+    <section>
+        <h2 id ="third-subheading">More Sub-Heading</h2>
+        <p class="long-paragraph">This paragraph should talk about yet another aspect of a person.
+            It might in fact be so comprehensive that its content might use more than one line, or even more than one sentence.
+            If it goes on long enough, then it might even be possible that its content could be divided into multiple columns. 
+            What it could posiibly include that justifies this level of debauchery and decadence I can't imagine.
+            That being said, this paragraph is actually now of a meaningful length without having actually communicated anything of significance.
+            If you are still reading at this point, then although I admire your patience, you should probably find something more productive 
+            (or at least entertaining) to do with your time.
+            Some might say that this pargraph has only continued for so long in order to justify it being divided into multiple columns - 
+            a feature which the author of this paragraph obviously wishes to demonstrate.
+        </p>
     </section>
 </body>
 <footer>
