styles navigation with tactile buttons

--- a/profile.html
+++ b/profile.html
@@ -7,11 +7,12 @@
     <title>Profile</title>
 </head>
 <nav id="nav-links">
-    <a href="#first-subheading">Sub-Heading</a>
-    <a href="#second-subheading">Another Sub-Heading</a>
-    <a href="#third-subheading">More Sub-Heading</a>
+    <a href="#home"><div class="nav-button">Home</div></a>
+    <a href="#first-section"><div class="nav-button">Sub-Heading</div></a>
+    <a href="#second-section"><div class="nav-button">Another Sub-Heading</div></a>
+    <a href="#third-section"><div class="nav-button">More Sub-Heading</div></a>
 </nav>
-<body>
+<body id="home">
     <h1>Main Heading</h1>
     <section id ="first-section">
         <h2 id="first-subheading">Sub-Heading</h2>
@@ -35,7 +36,7 @@
         <img src="https://i.pinimg.com/564x/ef/18/82/ef1882d2152faddd54ca2d24ce85511e.jpg" 
             alt="Hand drawn food items" id="food-img" >
     </section>
-    <section>
+    <section id="third-section">
         <h2 id ="third-subheading">More Sub-Heading</h2>
         <p class="long-paragraph">This paragraph should talk about yet another aspect of a person.
             It might in fact be so comprehensive that its content might use more than one line, or even more than one sentence.
