--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="profile-styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
@@ -13,7 +16,7 @@
     <a href="#third-section"><div class="nav-button">More Sub-Heading</div></a>
 </nav>
 <body id="home">
-    <h1>Main Heading</h1>
+    <h1>Main Heading</h1>                           
     <section id ="first-section">
         <h2 id="first-subheading">Sub-Heading</h2>
         <p>This is a paragraph about a person</p>
