--- a/profile.html
+++ b/profile.html
@@ -16,42 +16,44 @@
     <a href="#third-section"><div class="nav-button">More Sub-Heading</div></a>
 </nav>
 <body id="home">
-    <h1>Main Heading</h1>                           
-    <section id ="first-section">
-        <h2 id="first-subheading">Sub-Heading</h2>
-        <p>This is a paragraph about a person</p>
-        <ol>
-            <li>This is a point</li>
-            <li>That forms a part</li>
-            <li>Of an ordered list</li>
-        </ol>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png" 
-            alt="A stick figure is standing" id="stickman-img" >
-    </section>
-    <section id="second-section">
-        <h2 id="second-subheading">Another Sub-Heading</h2>
-        <p>This paragraph should talk about another aspect of a person</p>
-        <ul>
-            <li>This is a point</li>
-            <li>That forms part</li>
-            <li>Of an unordered list</li>
-        </ul>
-        <img src="https://i.pinimg.com/564x/ef/18/82/ef1882d2152faddd54ca2d24ce85511e.jpg" 
-            alt="Hand drawn food items" id="food-img" >
-    </section>
-    <section id="third-section">
-        <h2 id ="third-subheading">More Sub-Heading</h2>
-        <p class="long-paragraph">This paragraph should talk about yet another aspect of a person.
-            It might in fact be so comprehensive that its content might use more than one line, or even more than one sentence.
-            If it goes on long enough, then it might even be possible that its content could be divided into multiple columns. 
-            What it could posiibly include that justifies this level of debauchery and decadence I can't imagine.
-            That being said, this paragraph is actually now of a meaningful length without having actually communicated anything of significance.
-            If you are still reading at this point, then although I admire your patience, you should probably find something more productive 
-            (or at least entertaining) to do with your time.
-            Some might say that this pargraph has only continued for so long in order to justify it being divided into multiple columns - 
-            a feature which the author of this paragraph obviously wishes to demonstrate.
-        </p>
-    </section>
+    <div id="grid-container">
+        <h1>Main Heading</h1>                           
+        <section id ="first-section">
+            <h2 id="first-subheading">Sub-Heading</h2>
+            <p>This is a paragraph about a person</p>
+            <ol>
+                <li>This is a point</li>
+                <li>That forms a part</li>
+                <li>Of an ordered list</li>
+            </ol>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Basic_human_drawing.png" 
+                alt="A stick figure is standing" id="stickman-img" >
+        </section>
+        <section id="second-section">
+            <h2 id="second-subheading">Another Sub-Heading</h2>
+            <p>This paragraph should talk about another aspect of a person</p>
+            <ul>
+                <li>This is a point</li>
+                <li>That forms part</li>
+                <li>Of an unordered list</li>
+            </ul>
+            <img src="https://i.pinimg.com/564x/ef/18/82/ef1882d2152faddd54ca2d24ce85511e.jpg" 
+                alt="Hand drawn food items" id="food-img" >
+        </section>
+        <section id="third-section">
+            <h2 id ="third-subheading">More Sub-Heading</h2>
+            <p class="long-paragraph">This paragraph should talk about yet another aspect of a person.
+                It might in fact be so comprehensive that its content might use more than one line, or even more than one sentence.
+                If it goes on long enough, then it might even be possible that its content could be divided into multiple columns. 
+                What it could posiibly include that justifies this level of debauchery and decadence I can't imagine.
+                That being said, this paragraph is actually now of a meaningful length without having actually communicated anything of significance.
+                If you are still reading at this point, then although I admire your patience, you should probably find something more productive 
+                (or at least entertaining) to do with your time.
+                Some might say that this pargraph has only continued for so long in order to justify it being divided into multiple columns - 
+                a feature which the author of this paragraph obviously wishes to demonstrate.
+            </p>
+        </section>
+    </div>
 </body>
 <footer>
     <p>To see more, please visit my <a href="https://github.com/Stephen0wen" target="_blank">GitHub profile</a></p>
